cabal-version:       >= 1.10
name:                check-page-fragmentation
version:             2.0.3
synopsis:            Check page fragmentation and emit perfdata
license:             BSD3
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          sio@tesser.org
copyright:           Copyright 2013-2014 Anchor Systems Pty Ltd, and Others
category:            Other
tested-with:         GHC == 7.8
stability:           experimental

build-type:          Simple

source-repository    head
  type:              git
  location:          git@github.com:anchor/nagios-checks.git

executable check-page-fragmentation
  main-is:           Main.hs
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     nagios-check,
                     mtl >= 2.2,
                     text,
                     parsers,
                     formatting,
                     trifecta,
                     lens,
                     optparse-applicative,
                     transformers,
                     blaze-markup <= 0.6.2

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite           check-page-fragmentation-test
  main-is:           Test.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=3 && <5,
                     bytestring,
                     nagios-check >= 0.2,
                     hspec,
                     formatting,
                     trifecta,
                     text,
                     lens,
                     transformers,
                     blaze-markup <= 0.6.2

  ghc-options:       -fwarn-incomplete-patterns -threaded
