name:                check-rabbitmq-exchange
version:             0.1.0
synopsis:            Simple NRPE-based Nagios check for the length of a RabbitMQ queue
description:         Simple NRPE-based Nagios check for the length of a RabbitMQ queue
homepage:            https://github.com/anchor/haskell-nagios-checks
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.com.au>
maintainer:          Anchor Engineering <engineering@anchor.com.au>
-- copyright:
category:            Testing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  hs-source-dirs:    lib
  exposed-modules:   Nagios.Check.RabbitMQ
  other-modules:     Nagios.Check.RabbitMQ.Options
                     Nagios.Check.RabbitMQ.Types

  build-depends:     base >=4.7 && <4.8,
                     aeson,
                     optparse-applicative,
                     bytestring,
                     text,
                     nagios-check


  default-language:  Haskell2010


executable check-rabbitmq-exchange
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       bytestring,
                       mtl,
                       check-rabbitmq-exchange,
                       nagios-perfdata,
                       aeson,
                       vector,
                       nagios-check,
                       text,
                       http-client,
                       http-types,
                       data-default

  hs-source-dirs:      src
  default-language:    Haskell2010
