name:                nagios-plugin-rabbitmq-exchange
version:             0.0.1
synopsis:            Simple NRPE-based Nagios check for the length of a RabbitMQ queue
-- description:         
homepage:            https://github.com/anchor/nagios-plugin-rabbitmq-exchange
license:             BSD3
license-file:        LICENSE
author:              Barney Desmond
maintainer:          engineering@anchor.net.au
-- copyright:           
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


library
  hs-source-dirs:    lib
  exposed-modules:   Nagios.Check.RabbitMQ
  other-modules:     Nagios.Check.RabbitMQ.Options
                     Nagios.Check.RabbitMQ.Types
                     Nagios.Check.RabbitMQ.Process

  build-depends:     base >=4.7 && <4.8,
                     aeson,
                     optparse-applicative,
                     bytestring,
                     text

  default-language:  Haskell2010


executable nagios-plugin-rabbitmq-exchange
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       bytestring,
                       mtl,
                       nagios-plugin-rabbitmq-exchange,
                       nagios-check,
                       nagios-perfdata

  hs-source-dirs:      src
  default-language:    Haskell2010
